--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
 
 <div style="position:absolute; left:20px; top:20px">
     <div id="module-clock"><i class="fa fa-spin fa-circle-o-notch"></i></div>
+    <div id="module-tankerkoenig"><i class="fa fa-spin fa-circle-o-notch"></i></div>
 
     <audio id="audio">
         <source src="" type="audio/mpeg">
